RESOLVED FIXED94150
[EFL] autoscroll-in-textarea.html fails on EFL
https://bugs.webkit.org/show_bug.cgi?id=94150
Summary [EFL] autoscroll-in-textarea.html fails on EFL
Dominik Röttsches (drott)
Reported 2012-08-15 14:37:09 PDT
Test fails on EFL, introduced in r125648.
Attachments
Patch (715.77 KB, patch)
2012-09-17 04:33 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-17 04:33:27 PDT
WebKit Review Bot
Comment 2 2012-09-17 06:31:13 PDT
Comment on attachment 164366 [details] Patch Clearing flags on attachment: 164366 Committed r128750: <http://trac.webkit.org/changeset/128750>
WebKit Review Bot
Comment 3 2012-09-17 06:31:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.