[EFL] autoscroll-in-textarea.html fails on EFL https://bugs.webkit.org/show_bug.cgi?id=94150

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-17
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Do not call adjustTextAreaStyle() from RenderThemeEfl::adjustTextAreaStyle().
This is consistent with Mac port implementation.

Calling adjustTextAreaStyle() causes the TextArea in the test to display 6.5
rows instead of the 6 that are requested. This causes the test case to fail
because the top row that is being displayed when scrolling down is different
than the one expected.

Test: fast/events/autoscroll-in-textarea.html

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::adjustTextAreaStyle):

LayoutTests:

Unskip several test cases that are passing now that textareas
are rendered correctly.

Rebaseline several test cases due to the textarea rendering
change.

* platform/efl/TestExpectations:
* platform/efl/editing/input/reveal-caret-of-multiline-input-expected.png:
* platform/efl/editing/input/reveal-caret-of-multiline-input-expected.txt:
* platform/efl/fast/block/margin-collapse/103-expected.png:
* platform/efl/fast/block/margin-collapse/103-expected.txt:
* platform/efl/fast/dom/HTMLTextAreaElement/reset-textarea-expected.png:
* platform/efl/fast/dom/HTMLTextAreaElement/reset-textarea-expected.txt:
* platform/efl/fast/dynamic/008-expected.png:
* platform/efl/fast/dynamic/008-expected.txt:
* platform/efl/fast/forms/text-control-intrinsic-widths-expected.txt:
* platform/efl/fast/forms/textAreaLineHeight-expected.png:
* platform/efl/fast/forms/textAreaLineHeight-expected.txt:
* platform/efl/fast/forms/textarea-align-expected.png:
* platform/efl/fast/forms/textarea-align-expected.txt:
* platform/efl/fast/forms/textarea-placeholder-visibility-1-expected.png:
* platform/efl/fast/forms/textarea-placeholder-visibility-1-expected.txt:
* platform/efl/fast/forms/textarea-placeholder-visibility-2-expected.png:
* platform/efl/fast/forms/textarea-placeholder-visibility-2-expected.txt:
* platform/efl/fast/forms/textarea-scroll-height-expected.png: Added.
* platform/efl/fast/forms/textarea-scroll-height-expected.txt: Added.
* platform/efl/fast/forms/textarea-scrollbar-expected.png:
* platform/efl/fast/forms/textarea-scrollbar-expected.txt:
* platform/efl/fast/forms/textarea-scrolled-type-expected.png: Added.
* platform/efl/fast/forms/textarea-scrolled-type-expected.txt: Added.
* platform/efl/fast/forms/textarea-setinnerhtml-expected.png:
* platform/efl/fast/forms/textarea-setinnerhtml-expected.txt:
* platform/efl/fast/forms/textarea-width-expected.png:
* platform/efl/fast/forms/textarea-width-expected.txt:
* platform/efl/fast/overflow/overflow-x-y-expected.png:
* platform/efl/fast/overflow/overflow-x-y-expected.txt:
* platform/efl/fast/parser/entity-comment-in-textarea-expected.png:
* platform/efl/fast/parser/entity-comment-in-textarea-expected.txt:
* platform/efl/fast/parser/open-comment-in-textarea-expected.png:
* platform/efl/fast/parser/open-comment-in-textarea-expected.txt:
* platform/efl/fast/replaced/width100percent-textarea-expected.png:
* platform/efl/fast/replaced/width100percent-textarea-expected.txt:
* platform/efl/fast/table/003-expected.png:
* platform/efl/fast/table/003-expected.txt:
* platform/efl/http/tests/navigation/javascriptlink-frames-expected.png:
* platform/efl/http/tests/navigation/javascriptlink-frames-expected.txt:

Canonical link: https://commits.webkit.org/114824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128750 268f45cc-cd09-0410-ab3c-d52691b4dbfc